tests/sksl/errors/InvalidOutParams.dsl.glsl
### Compilation failed:

error: cannot assign to this expression

error: cannot assign to this expression

error: cannot assign to this expression

3 errors
